* Fix - Display the Payment Request Buttons' error message in the classic checkout page.
* Fix - Prevent escaping the anchor tag under the Apple Pay domain registration failure notice.
* Fix - Use the card's payer name for Payment Request Buttons when the billing name isn't available.
* Fix - Display the Payment Request Buttons according to the selected settings.
* Tweak - Prevent Google Pay and Apple Pay from showing up in the UPE card Element.
* Tweak - Use admin theme color in selectors.
* Tweak - Refactor `is_valid_pay_for_order_endpoint` for better performance.
* Fix - Catch request failure errors.

= 7.6.0 - 2023-09-14 =
* Fix - PHP fatal error when saving a non-UPE payment method and the Stripe request to retrieve it fails.
* Fix - Missing mapping for formal German (de_DE_formal), Swiss German (de_CH), and informal Swiss German (de_CH_informal) locales for Stripe emails.
* Fix - Set failed order as pre order
* Tweak - Include check during the connect redirect flow.
* Tweak - Skip Apple Pay registration for accounts from India.
* Tweak - Refactor post_meta calls for HPOS compatibility.

= 7.5.0 - 2023-08-10 =
* Fix - Unable to process 0 amount subscription.
* Fix - Resolved an issue that prevented customers using saved `card_` prefixed payment methods on checkout.

= 7.4.2 - 2023-07-31 =
* Fix - Add order key validation for UPE.
* Fix - Enhance query parameters validation in redirected requests.
* Fix - Resolved an issue with orders getting stuck on Pending Payment status when UPE is enabled and customer creates account during checkout.
* Fix - Stripe source and customer tokens not being saved on subscriptions when UPE is enabled and subscription is purchased by guest customer.
* Fix - Make the gateway unavailable when using it in live mode without SSL.
* Fix - Remove Stripe Link PRB when disabled from settings.
* Fix - Lookup existing refunds by refund ID when processing webhooks.
* Fix - Exclude Link from disable UPE confirmation modal in settings.