@@ -9,6 +9,7 @@ import {
 	useAccountKeysWebhookSecret,
 } from 'wcstripe/data/account-keys/hooks';
 import { useAccount } from 'wcstripe/data/account';
+import { recordEvent } from 'wcstripe/tracking';
 
 jest.mock( 'wcstripe/data/account-keys/hooks', () => ( {
 	useAccountKeys: jest.fn(),
@@ -19,6 +20,10 @@ jest.mock( 'wcstripe/data/account-keys/hooks', () => ( {
 
 jest.mock( 'wcstripe/data/account', () => ( {
 	useAccount: jest.fn(),
+} ) );
+
+jest.mock( 'wcstripe/tracking', () => ( {
+	recordEvent: jest.fn(),
 } ) );
 
 describe( 'ConnectStripeAccount', () => {
@@ -35,21 +40,62 @@ describe( 'ConnectStripeAccount', () => {
 		).toBeInTheDocument();
 	} );
 
-	it( 'should have a Stripe OAuth link for "Create or connect an account" button', () => {
+	it( 'should render both the Connect Account and Enter keys buttons when the Stripe OAuth link is provided', () => {
 		render(
 			<ConnectStripeAccount oauthUrl="https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_1234&scope=read_write&state=1234" />
 		);
 
 		expect( screen.queryByText( 'Terms of service.' ) ).toBeInTheDocument();
+
 		expect(
 			screen.getByText( 'Create or connect an account' )
-		).toHaveAttribute(
-			'href',
-			'https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_1234&scope=read_write&state=1234'
-		);
+		).toBeInTheDocument();
+
 		expect(
 			screen.queryByText( 'Enter account keys (advanced)' )
 		).toBeInTheDocument();
+	} );
+
+	it( 'should redirect to the Stripe OAuth link when clicking on the "Create or connect an account" button', () => {
+		// Keep the original function at hand.
+		const assign = window.location.assign;
+
+		Object.defineProperty( window, 'location', {
+			value: { assign: jest.fn() },
+		} );
+
+		const oauthUrl =
+			'https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_1234&scope=read_write&state=1234';
+
+		render( <ConnectStripeAccount oauthUrl={ oauthUrl } /> );
+
+		const connectAccountButton = screen.getByText(
+			'Create or connect an account'
+		);
+		userEvent.click( connectAccountButton );
+
+		expect( window.location.assign ).toHaveBeenCalledWith( oauthUrl );
+
+		// Set the original function back to keep further tests working as expected.
+		Object.defineProperty( window, 'location', {
+			value: { assign },
+		} );
+	} );
+
+	it( 'should record a "wcstripe_create_or_connect_account_click" Track event when clicking on the Connect account button', () => {
+		render(
+			<ConnectStripeAccount oauthUrl="https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_1234&scope=read_write&state=1234" />
+		);
+
+		const connectAccountButton = screen.getByText(
+			'Create or connect an account'
+		);
+		userEvent.click( connectAccountButton );
+
+		expect( recordEvent ).toHaveBeenCalledWith(
+			'wcstripe_create_or_connect_account_click',
+			{}
+		);
 	} );
 
 	it( 'should only have the "Enter account keys" button if OAuth URL is blank', () => {
@@ -91,5 +137,17 @@ describe( 'ConnectStripeAccount', () => {
 		expect(
 			screen.queryByText( /edit live account keys & webhooks/i )
 		).toBeInTheDocument();
+	} );
+
+	it( 'should record a "wcstripe_enter_account_keys_click" Track event when clicking on the Enter account keys button', () => {
+		render( <ConnectStripeAccount oauthUrl="" /> );
+
+		const accountKeysButton = screen.queryByText( /enter account keys/i );
+		userEvent.click( accountKeysButton );
+
+		expect( recordEvent ).toHaveBeenCalledWith(
+			'wcstripe_enter_account_keys_click',
+			{}
+		);
 	} );
 } );
