@@ -6,6 +6,7 @@ import { Button, Card } from '@wordpress/components';
 import CardBody from '../card-body';
 import { AccountKeysModal } from '../payment-settings/account-keys-modal';
 import StripeBanner from 'wcstripe/components/stripe-banner';
+import { recordEvent } from 'wcstripe/tracking';
 
 const CardWrapper = styled( Card )`
 	max-width: 560px;
@@ -51,6 +52,16 @@ const ConnectStripeAccount = ( { oauthUrl } ) => {
 	const [ modalType, setModalType ] = useState( '' );
 	const handleModalDismiss = () => {
 		setModalType( '' );
+	};
+
+	const handleCreateOrConnectAccount = () => {
+		recordEvent( 'wcstripe_create_or_connect_account_click', {} );
+		window.location.assign( oauthUrl );
+	};
+
+	const handleEnterAccountKeys = () => {
+		recordEvent( 'wcstripe_enter_account_keys_click', {} );
+		setModalType( 'live' );
 	};
 
 	return (
@@ -100,7 +111,10 @@ const ConnectStripeAccount = ( { oauthUrl } ) => {
 					) }
 					<ButtonWrapper>
 						{ oauthUrl && (
-							<Button isPrimary href={ oauthUrl }>
+							<Button
+								isPrimary
+								onClick={ handleCreateOrConnectAccount }
+							>
 								{ __(
 									'Create or connect an account',
 									'woocommerce-gateway-stripe'
@@ -111,7 +125,7 @@ const ConnectStripeAccount = ( { oauthUrl } ) => {
 							isPrimary={ ! oauthUrl }
 							isSecondary={ !! oauthUrl }
 							// eslint-disable-next-line no-alert, no-undef
-							onClick={ () => setModalType( 'live' ) }
+							onClick={ handleEnterAccountKeys }
 						>
 							{ oauthUrl
 								? __(
